[package]
name = "universal-tlsn"
version = "0.1.0"
edition = "2021"

[dependencies]
pin-project-lite = "0.2.4"
tokio_wasi = { version = "1", features = [
    "fs",
    "macros",
    "net",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
] }
hyper = { version = "1", features = ["full"] }
#tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
clap = { version = "4.5", features = ["derive"] }
dotenv = { version = "0.15.0" }
bincode = { version = "1.3" }
chrono = { version = "0.4" }
http-body-util = { version = "0.1" }
futures = { version = "0.3" }
hex = { version = "0.4" }
hyper-util = { version = "0.1" , features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa"] }
serde_json = { version = "1.0" }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.4" }



notary-client = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-common ={ git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }


tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6"}
tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }

tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-tls-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tls-server-fixture = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-server-fixture-certs =  { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }

spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }


[profile.bench]
codegen-units = 1
incremental = false

[[bench]]
name = "server"
path = "benches/server.rs"

